--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+genius_api_creds.txt
+.Renviron
